syntax = "proto3";

package serviceThree;

option java_package = "com.proto.serviceThree";
option java_multiple_files = true;

service SensorSystemService {
  //Unary -  activate and deactivate sensors
  rpc ActivateSensors(ActivateSensorsRequest) returns (ActivateSensorsResponse) {}

  //Client streaming - senors continue to send information to the server about any movement they detect
  rpc DetectMotion(stream DetectMotionRequest) returns (DetectMotionResponse) {}
}

message ActivateSensorsRequest {
  // A boolean indicating whether to activate or deactivate the sensors.
  bool activate = 1;
}

message ActivateSensorsResponse {
  // message displaying activated/deactivated
  string message = 1;
}

message DetectMotionRequest {

  bool sensor1Activated = 1;
  bool sensor2Activated = 2;
  bool sensor3Activated = 3;

}

message DetectMotionResponse {
  // An alert message triggered by the sensors.
  string alert_message = 1;
}